fixed cut off

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -133,6 +133,7 @@ position: sticky;
 top: 0;
 left: 80px;
 height: fit-content;
+min-height: 412.84px;
 padding: 10px;
 }
 
